sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:20: error: Unmatched closing brace '}' ignored here
}
^